--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -73,6 +73,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".list.BookmarksListActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.MAIN" >
+                </category>
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".filter.FilterActivity"
             android:label="@string/app_name" >
             <intent-filter>
