--- a/BioadresarAndroid/.classpath
+++ b/BioadresarAndroid/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-mapviewballoons"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/actionbarsherlock-plugin-maps-4.2.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
