--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -22,7 +22,9 @@
     android:versionCode="1"
     android:versionName="@string/versionName" >
 
-    <uses-sdk android:minSdkVersion="7" />
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="14" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -30,7 +32,8 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_hnuti_duha"
-        android:label="@string/app_name" > <!-- android:theme="@android:style/Theme.Black.NoTitleBar" -->
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Sherlock" >
         >
         <uses-library android:name="com.google.android.maps" />
 
