--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo_hnuti_duha"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock" >
         >
@@ -39,8 +39,7 @@
 
         <activity
             android:name=".MainMenuActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoDisplay" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
