--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="14" />
+        android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -48,7 +48,7 @@
         </activity>
         <activity
             android:name=".map.MapActivity"
-            android:label="@string/app_name" >
+            android:label="@string/map_activity_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -58,7 +58,7 @@
         </activity>
         <activity
             android:name=".list.ListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/list_activity_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -68,7 +68,7 @@
         </activity>
         <activity
             android:name=".list.BookmarksListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/bookmarks_activity_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
