--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -31,8 +31,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo_hnuti_duha"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:logo="@drawable/logo_hnuti_duha"
         android:theme="@style/Theme.HnutiDuha" >
         <uses-library android:name="com.google.android.maps" />
 
