--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@drawable/logo_hnuti_duha"
-        android:theme="@style/Theme.HnutiDuha" >
+        android:theme="@style/Theme.HnutiDuhaTheme" >
         <uses-library android:name="com.google.android.maps" />
 
         <activity
