--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -100,6 +100,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".editFarm.EditFarmActivity"
+            android:label="@string/add_farm" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".about.AboutActivity"
             android:label="@string/app_name" >
             <intent-filter>
