edit position with logic

--- a/BioadresarAndroid/project.properties
+++ b/BioadresarAndroid/project.properties
@@ -14,3 +14,4 @@
 target=Google Inc.:Google APIs:14
 android.library.reference.1=../../android-mapviewballoons/android-mapviewballoons
 android.library.reference.2=../../ActionBarSherlock/actionbarsherlock
+android.library.reference.3=../../../workspace/google-play-services_lib
