--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -27,7 +27,18 @@
         android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <uses-feature android:glEsVersion="0x00020000" /> <!-- android:required="true"/> -->
+    <permission
+        android:name="com.ecs.google.maps.v2.actionbarsherlock.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="cz.hnutiduha.bioadresar.permission.MAPS_RECEIVE" />
 
     <application
         android:allowBackup="true"
@@ -36,6 +47,13 @@
         android:logo="@drawable/logo_hnuti_duha"
         android:theme="@style/Theme.HnutiDuhaTheme" >
         <uses-library android:name="com.google.android.maps" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAVKtOs0WSQ36G519JNyopW7z9kaQRUKvo" />
 
         <activity
             android:name=".MainMenuActivity"
