--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -119,6 +119,7 @@
         </activity>
         <activity
             android:name=".editFarm.EditFarmActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/add_farm" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
