--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -19,7 +19,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cz.hnutiduha.bioadresar"
     android:installLocation="auto"
-    android:versionCode="14"
+    android:versionCode="15"
     android:versionName="@string/versionName" >
 
     <uses-sdk
@@ -83,6 +83,7 @@
         </activity>
         <activity
             android:name=".list.ListActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/list_activity_name"
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
@@ -101,6 +102,7 @@
         </activity>
         <activity
             android:name=".list.BookmarksListActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/bookmarks_activity_name"
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
@@ -138,6 +140,7 @@
         </activity>
         <activity
             android:name=".about.AboutActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -145,6 +148,7 @@
         </activity>
         <activity
             android:name=".config.ConfigActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/config_label" >
         </activity>
     </application>
