--- a/BioadresarAndroid/AndroidManifest.xml
+++ b/BioadresarAndroid/AndroidManifest.xml
@@ -19,8 +19,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cz.hnutiduha.bioadresar"
     android:installLocation="auto"
-    android:versionCode="17"
-    android:versionName="@string/versionName" >
+    android:versionCode="18"
+    android:versionName="1.4" >
 
     <uses-sdk
         android:minSdkVersion="8"
